<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_light_background"
    tools:context=".ui.auth.LoginFragment"
    tools:ignore="ExtraText">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageView"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/usuario">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:minHeight="48dp"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/contraseña">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColorHint="#616161" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/login"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgotPasswordButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            app:cornerRadius="25dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signGoogle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:drawableLeft="@drawable/gogle"
            android:text="@string/googleSignInButton"
            android:textColor="#020202"
            app:cornerRadius="25dp"
            app:iconPadding="8dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>